web-infras/parser/tests/fixtures/babel/es2015/yield/function-name-strict-body/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function yield() { "use strict"; }
 |        ^
